typocode/src/snapshots/typocode__view__tests__bat_frame_default.snap
---
source: src/view.rs
assertion_line: 195
expression: "render_frame(&mut app, 40, 10)"
---
──┬─────────────────────────────────────
  │ File: hello.rs                      
──┼─────────────────────────────────────
1 │ fn main() {                         
2 │     println!("hi");                 
3 │ }                                   
  │                                     
──┼─────────────────────────────────────
  │ Page: 1/1  00:00  100%  0 WPM       
──┴─────────────────────────────────────
