typocode/src/snapshots/typocode__view__tests__bat_frame_with_wrong_keystroke_overlay.snap
---
source: src/view.rs
assertion_line: 212
expression: "render_frame(&mut app, 40, 10)"
---
──┬─────────────────────────────────────
  │ File: hello.rs                      
──┼─────────────────────────────────────
1 │ fnXmain() {                         
2 │     println!("hi");                 
3 │ }                                   
  │                                     
──┼─────────────────────────────────────
  │ Page: 1/1  00:00  67%  0 WPM        
──┴─────────────────────────────────────
