typocode/src/snapshots/typocode__view__tests__small_viewport_falls_back_to_plain.snap
---
source: src/view.rs
assertion_line: 219
expression: "render_frame(&mut app, 20, 5)"
---
1 abc               
                    
                    
                    
Page: 1/1  00:00  10
