typocode/src/snapshots/typocode__view__tests__wrong_enter_renders_newline_glyph.snap
---
source: src/view.rs
assertion_line: 239
expression: "render_frame(&mut app, 40, 10)"
---
──┬─────────────────────────────────────
  │ File: hello.rs                      
──┼─────────────────────────────────────
1 │ ⏎n main() {                         
2 │     println!("hi");                 
3 │ }                                   
  │                                     
──┼─────────────────────────────────────
  │ Page: 1/1  00:00  0%  0 WPM         
──┴─────────────────────────────────────
