typocode/src/snapshots/typocode__view__tests__wrong_space_renders_space_glyph.snap
---
source: src/view.rs
assertion_line: 216
expression: "render_frame(&mut app, 40, 10)"
---
──┬─────────────────────────────────────
  │ File: hello.rs                      
──┼─────────────────────────────────────
1 │ ␣n main() {                         
2 │     println!("hi");                 
3 │ }                                   
  │                                     
──┼─────────────────────────────────────
  │ 00:00  0%  Page: 1/1                
──┴─────────────────────────────────────
